# termpaint

./: CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/chromapaint/: __init__.py  _compat.py  ansi.py  ansitowin32.py  environ.py  initialise.py
src/termpaint/: __init__.py  _compat.py  ansitowin32.py  initialise.py  win32.py  winterm.py
tests/: test_ansi.py  test_ansitowin32.py  test_environ.py  test_init.py  test_initialise.py  test_win32.py
